--- a/CSS/main.css
+++ b/CSS/main.css
@@ -11,25 +11,23 @@ body {
     margin-top: 60px;
     width: 1170px;
     height: 100px;
-
 }
 
 .nav ul {
     display: table;
     margin: 0 auto;
 }
+
 .nav li {
     float:left;
 }
 
 .nav-menu li {
     display: inline-block;
-    
 }
 
 .nav-menu a {
     padding-right: 60px;
-
 }
 
 .nav a {
@@ -41,17 +39,60 @@ body {
     text-decoration: none;
     color: #FFFFFF;
     transition: all 1s ease;
-    
 }
 
 .nav-menu a:hover {
     color: red;
 }
 
-.circle {
-
+.wrapper {
+    width: 1095px;
+    height: 470px;
 }
 
+.offer {
+    width: 525px;
+    height: 462px;
+}
+
+.title {
+    width: 421px;
+    height: 128px;
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 128px;
+    line-height: 128px;
+    color: #FFFFFF;
+}
+
+.intro {
+    width: 525px;
+    height: 232px;
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 48px;
+    line-height: 58px;
+    color: #FFFFFF;
+}
+
+.logo-home {
+    position: absolute;
+    width: 470px;
+    height: 470px;
+    left: 1037px;
+    top: 337px;
+}
+
+.section {
+    padding-top: 170px;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
+}
 
 
 
